Bug 51388 - All versions after 6.14.3 are crashing X session with xserver 1.8.x or older
Summary: All versions after 6.14.3 are crashing X session with xserver 1.8.x or older
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-24 14:47 UTC by denisgolovan
Modified: 2012-06-25 13:48 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description denisgolovan 2012-06-24 14:47:08 UTC
Hi

The behaviour looks like that - just several seconds after window manager starts, X crashes. 
That is a regression in recent releases. 
Version 6.14.3 is the last working version.
I bisected the problem down to commit 3853c3020d05175ae180b9a188dec7c425bdd0b8.

Reverting that commit fixes the problem.
Tested under the latest git revision 248e912c487636d7352cfad43c03fc9f19fc2215.

P.S. I use ATI Radeon 5850, Gentoo x86, xorg-server-1.8.2 dual head (xrandr), libdrm-2.4.35.

Please investigate.
Comment 1 Michel Dänzer 2012-06-25 01:12:42 UTC
Dave, any idea what to do for xserver 1.8 or older?
Comment 2 Dave Airlie 2012-06-25 01:17:55 UTC
/me has no idea why that happens, wierd.

If wrapping it version checks works I do that, but really sounds like a server bug, and 1.8.2 is not really supported anymore.
Comment 3 Dave Airlie 2012-06-25 05:11:22 UTC
should be fixed in X server master now.
Comment 4 denisgolovan 2012-06-25 13:48:10 UTC
Thanks. Now it works.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.