radeon: dixPrivateKeyRegistered is only in server 1.9

just fallback to the old behaviour on older servers.

should fix: https://bugs.freedesktop.org/show_bug.cgi?id=51388
Review-over-irc: Michel Dänzer <michel.daenzer@amd.com>
Signed-off-by: Dave Airlie <airlied@redhat.com>